--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "solidity.compileUsingRemoteVersion": "v0.8.13+commit.abaa5c0e",
     "solidity.remappings": [
         "ds-test/=lib/ds-test/src/",
-        "solmate/=lib/solmate/src/"
+        "@solmate/=lib/solmate/src/",
+        "@openzeppelin/=lib/openzeppelin-contracts/"
     ]
 }
