--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,8 @@ out = 'out'
 libs = ['lib']
 remappings = [
     'ds-test/=lib/ds-test/src/',
-    'solmate/=lib/solmate/src/'
+    '@solmate/=lib/solmate/src/',
+    '@openzeppelin/=lib/openzeppelin-contracts/'
 ]
 solc = '0.8.13'
 
